# VideoProcessingFramework

./: CMakeLists.txt  pyproject.toml  setup.py
docker/: Dockerfile
samples/: SampleDemuxDecode2.py
src/: CMakeLists.txt
src/PyNvCodec/: CMakeLists.txt
src/PytorchNvCodec/: CMakeLists.txt  Dockerfile  pyproject.toml  setup.py
src/TC/: CMakeLists.txt
src/TC/TC_CORE/: CMakeLists.txt
